found_bugs/kotlin/3/compiler_output
program.kt:4:16: error: type mismatch: inferred type is Any but String was expected
        return thunk()
               ^
